kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-peerprep
  name: client-peerprep
  namespace: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-peerprep
  template:
    metadata:
      labels:
        app: client-peerprep
    spec:
      containers:
        - image: asia-southeast1-docker.pkg.dev/peerprep-440902/peerprep/client-peerprep
          name: client-peerprep
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      restartPolicy: Always
status: {}
