kubernetes/matching-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matching-service
  name: matching-service
  namespace: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
        - image: kbtay/matching-service:latest
          imagePullPolicy: IfNotPresent
          name: matching-service
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      restartPolicy: Always
status: {}
