kubernetes/peerprep-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: peerprep
  name: peerprep
  namespace: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peerprep
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: peerprep
    spec:
      containers:
        - image: kbtay/peerprep:latest
          imagePullPolicy: IfNotPresent
          name: peerprep
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      restartPolicy: Always
status: {}
