kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:latest
          imagePullPolicy: IfNotPresent
          name: redis
      restartPolicy: Always
status: {}
