kubernetes/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
  namespace: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - image: asia-southeast1-docker.pkg.dev/peerprep-440902/peerprep/user-service
          imagePullPolicy: Always
          name: user-service
      restartPolicy: Always

status: {}
