kubernetes/matching-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service
  namespace: peerprep
spec:
  selector:
    app: matching-service
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
