kubernetes/question-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-service
  namespace: peerprep
spec:
  selector:
    app: question-service
  ports:
    - protocol: "TCP"
      port: 3002
      targetPort: 3002
  type: ClusterIP
