kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: peerprep
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6173
      # nodePort: 32657
  type: ClusterIP
