kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    type: backend
    app: peerprep-service
